--- a/css/common.css
+++ b/css/common.css
@@ -12,3 +12,14 @@ body {
   color: #212121;
   line-height: 1.5;
 }
+
+.gallery {
+
+  flex-wrap: wrap;
+  justify-content: space-around;
+
+  gap: 24px;
+  margin-left: 156px;
+  margin-top: 100px;
+  margin-right: 156px;
+}
